# VoxelEngine

./: .gitignore  CMakeLists.txt
shaders/: fragment.glsl
src/: Shader.cpp  Shader.h  main.cpp
